--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- container -->
@@ -21,13 +22,13 @@
         <div class="header-bottom">
           <nav >
             <ul id="menu">
-              <li> <a href="#">Home</a> </li>
-              <li> <a href="#">About</a> </li>
-              <li> <a href="#">Page template</a> </li>
-              <li> <a href="#">A parent page</a> </li>
-              <li> <a href="#">Features</a> </li>
-              <li> <a href="#">Blog</a> </li>
-              <li> <a href="#">Contact</a> </li>
+              <li> <a class="link-menu" href="#">Home</a> </li>
+              <li> <a class="link-menu" href="#">About</a> </li>
+              <li> <a class="link-menu" href="#">Page template</a> </li>
+              <li> <a class="link-menu" href="#">A parent page</a> </li>
+              <li> <a class="link-menu" href="#">Features</a> </li>
+              <li> <a class="link-menu" href="#">Blog</a> </li>
+              <li> <a class="link-menu" href="#">Contact</a> </li>
             </ul>
 
           </nav>
@@ -38,9 +39,11 @@
       <!-- corpo della pagina -->
       <main>
         <aside class="left-col">
-          <ul id="links">
-            <h2 id="lt" >Organic Themes</h2>
+          <h2 class="left-title" >Organic Themes</h2>
+          <div class="rss">
             <i class="fas fa-rss"></i>
+          </div>
+          <ul class="links">
             <li> <a href="#">Lorem ipsum dolor sit amet,consectetur adipisicing</a>
             </li>
             <br>
@@ -59,7 +62,7 @@
         </aside>
 
         <section class="center">
-          <h2 id="ct">three column</h2>
+          <h2 class="central-title">three column</h2>
           <p>Lorem ipsum dolor sit amet,consectetur adipisicing elit,sed do eiusmod tempor incididuntut labore et dolore magnaaliqua. Ut enim ad minim veniam,quis nostrud exercitationullamco laboris nisi ut aliquipex ea commodo consequat. Duisaute irure dolor inreprehenderit in voluptate velitesse cillum dolore eu fugiatnulla pariatur. Excepteur sintoccaecat cupidatat non proident,sunt in culpa qui officiadeserunt mollit anim id estlaborum.
 </p>
         </section>
@@ -67,21 +70,21 @@
         <aside class="right-col">
 
           <div class="widget">
-            <h2 class="wt">text widget</h2>
+            <h2 class="widget-title">Text Widget</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
           </div>
 
           <div class="widget">
-            <h2 class="wt">text widget</h2>
+            <h2 class="widget-title">Text Widget</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
           </div>
 
           <div class="widget">
-            <h2 class="wt">text widget</h2>
+            <h2 class="widget-title">Text Widget</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
