--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <!-- chiusura pagina -->
       <footer>
         <div class="footer-top">
-          <i>pagina realizzata da Marco Bottoni</i>
+          <i class="copyright">pagina realizzata da Marco Bottoni</i>
 
         </div>
 
